<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterUserActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="90dp"
        android:text="@string/lblRegisterUser"
        android:textColor="#E30613"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtRegisterNombres"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="54dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtRegisterNombres"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/txtRegisterTelefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="54dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtRegisterTelefono"
        android:inputType="phone"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterApellidos" />

    <EditText
        android:id="@+id/txtRegisterEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="54dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtRegisterEmail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterTelefono" />

    <EditText
        android:id="@+id/txtRegisterPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginEnd="54dp"
        android:layout_marginBottom="11dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtRegisterPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/chkRegisterTerminosCondiciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtRegisterApellidos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="54dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="54dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtRegisterApellidos"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtRegisterNombres" />

    <CheckBox
        android:id="@+id/chkRegisterTerminosCondiciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="24dp"
        android:text="@string/chkTerminosyCondiciones"
        app:layout_constraintBottom_toTopOf="@+id/btnRegisterCrear"
        app:layout_constraintEnd_toEndOf="@+id/txtRegisterPassword" />

    <Button
        android:id="@+id/btnRegisterCrear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#E30613"
        android:text="@string/btnRegisterCrear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/chkRegisterTerminosCondiciones" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logopideyapp" />

    <ListView
        android:id="@+id/RegistroUser"
        android:layout_width="414dp"
        android:layout_height="76dp"
        tools:layout_editor_absoluteX="-2dp"
        tools:layout_editor_absoluteY="565dp" />

</androidx.constraintlayout.widget.ConstraintLayout>