<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_horizontal|fill_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="160dp"
                android:layout_height="70dp"
                android:layout_marginTop="41dp"
                android:layout_marginEnd="41dp"
                android:layout_marginBottom="532dp"
                android:background="@drawable/pideyapp_logo"
                android:contentDescription="@string/app_name" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/lblRegisterUser"
                android:textColor="#FF0000"
                android:textSize="28sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtPerfilNombres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txtRegisterNombres"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/txtPerfilApellidos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txtRegisterApellidos"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/txtPerfilDocumento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txtRegisterDocumento"
                android:inputType="number"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/txtPerfilTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txtRegisterTelefono"
                android:inputType="phone"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/txtPerfilEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txtRegisterEmail"
                android:inputType="textEmailAddress"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/txtPerfilPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/txtRegisterPassword"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColorHint="#757575" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnPerfilActualizar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="20dp"
                    android:backgroundTint="#FF0000"
                    android:minHeight="48dp"
                    android:onClick="btnActualizar"
                    android:text="Actualizar"
                    android:textColor="@color/white" />

                <Space
                    android:layout_width="5dp"
                    android:layout_height="10dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnPerfilEliminar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="20dp"
                    android:backgroundTint="#FF0000"
                    android:minHeight="48dp"
                    android:onClick="btnEliminar"
                    android:text="Eliminar Cuenta"
                    android:textColor="@color/white" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>